-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Storage
-
Fully Compatible
-
ALL
-
Execution Team 2020-11-16
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Uninitialized scalar field
The field will contain an arbitrary value left over from earlier computations. A scalar field is not initialized by the constructor
/src/mongo/db/storage/ephemeral_for_test/ephemeral_for_test_radix_store.h:900: UNINIT_CTOR 116124 Class member declaration for "_nodeType".
/src/mongo/db/storage/ephemeral_for_test/ephemeral_for_test_radix_store.h:839: UNINIT_CTOR 116124 Non-static class member "_nodeType" is not initialized in this constructor nor in any functions that it calls.