SERVER-50201 Initialize _nodeType to be NodeType::LEAF in ephemeralForTest